\name{NEWS}
\title{NEWS file for the gridSVG package}
\encoding{UTF-8}

\section{Changes in version 1.0-0}{
  \itemize{

    \item Bumped the SVG version number to 1.1. (Simon)

    \item Initial implementation of viewport coordinate information
    exporting. (Simon)

    \item Added support for coordinate system importing and unit
    conversion. (Simon)

    \item Added support for exporting a JS file with utility functions
    present. Of note is that these include JS implementations of unit
    conversion routines. (Simon)

    \item Using viewport paths instead of viewport names for group
    elements. This causes us to refer to clipping paths and coordinate
    information based on the path. Viewport paths still have a numeric
    suffix. (Simon)

    \item Script MIME type updated to be more compatible with the SVG
    spec. (Simon)

    \item Added call to 'grid.refresh()' when running 'gridToSVG()' in
    order to avoid seeing a blank page. (Simon)

    \item Axis sub-grobs now adhere to the common gridSVG naming
    scheme. (Simon)

    \item All markup-based output is now written using the 'XML'
    package. (Simon)

    \item Added a new option to 'gridToSVG()', 'res'. This sets the
    device resolution so that we can reproduce plots regardless of the
    source device that 'gridToSVG()' grabs a grid scene from. (Simon)

    \item Added a new option to 'gridToSVG()', 'indent'. This either
    exports SVG with hierarchical indentation, or none at all. All
    output occurs in one line in the case that the 'indent' option is
    'FALSE'. (Simon)

    \item Making the XML declaration optional. This means that inserting
    SVG straight into an HTML5 document is more easily done because the
    declaration is not necessary with inline SVG. (Simon)

    \item When the filename is set to 'NULL' or '""' return the SVG
    document as a list containing the root SVG node reference,
    coordinate data (list) and JS utility functions (character