@@ -1216,12 +1216,15 @@ incID <- function(svgdev, n=1) {
 svgHeader <- function(width, height, svgdev=svgDevice()) {
     # This header tested on standalone SVG file in Firefox 3
     # FIXME:  add default xmlns for animation and scripts too?
-    svgdoc <- newXMLNode("svg",
-                         namespaceDefinitions = list("http://www.w3.org/2000/svg",
-                                                     xlink = "http://www.w3.org/1999/xlink"),
-                         attrs = list(width = paste0(round(width, 2), "px"),
-                                      height = paste0(round(height, 2), "px"),
-                                      version = "1.1"))
+    svgdoc <-
+        newXMLNode("svg",
+                   namespaceDefinitions = list("http://www.w3.org/2000/svg",
+                       xlink = "http://www.w3.org/1999/xlink"),
+                   attrs = list(width = paste0(round(width, 2), "px"),
+                       height = paste0(round(height, 2), "px"),
+                       viewBox = paste(0, 0,
+                           round(width, 2), round(height, 2)),
+                       version = "1.1"))
     # Invert the y-axis so that y and height values measure "up"
     rootg <- newXMLNode("g",
                         parent = svgdoc,
